--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+@import "material-icons/iconfont/material-icons.css";
+@import "~ng-pick-datetime/assets/style/picker.min.css";
+
+body, html {
+    padding: 0;
+    margin: 0;
+    outline: 0;
+    border: none;
+    font-family: 'Roboto', sans-serif;
+}
