--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,6 +5,7 @@
     height: 123px;
     width: calc(100vw - 360px);
     background: #ffffff;
+    z-index: 1;
 }
 
 .left{
@@ -14,6 +15,7 @@
     height: 100vh;
     width: 360px;
     background: #ffffff;
+    z-index: 1;
 }
 
 .main{
@@ -24,4 +26,5 @@
     height: calc(100vh - 183px);
     width: calc(100vw - 420px);
     box-shadow: inset 0 0 10px 0 rgba(0,0,0,.2);
+    z-index: 0;
 }
